--- a/workshop1/hello-ingress.yml
+++ b/workshop1/hello-ingress.yml
@@ -5,9 +5,12 @@ kind: Ingress
 metadata:
   name: hello-ingress
   namespace: default
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
-  - host: hello-world.info
+  - host: localhost
     http:
       paths:
       - pathType: Prefix
