--- a/workshop1/hello-springboot-deployment.yaml
+++ b/workshop1/hello-springboot-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: spring-boot-deployment
+  namespace: hello-kubernetes
   labels:
     app: hello-spring-boot
 spec:
@@ -23,31 +24,3 @@ spec:
         ports:
         - containerPort: 10000
           name: spring-boot-svc
-        readinessProbe:
-          httpGet:
-            path: /sample/actuator/health
-            port: spring-boot-svc
-          initialDelaySeconds: 60
-          timeoutSeconds: 10
-          periodSeconds: 3
-          failureThreshold: 2
-        livenessProbe:
-          httpGet:
-            path: /sample/actuator/health
-            port: spring-boot-svc
-          initialDelaySeconds: 120
-          timeoutSeconds: 2
-          periodSeconds: 8
-          failureThreshold: 1
----
-apiVersion: v1
-kind: Service
-metadata: 
-  name: spring-boot-service
-spec:
-  selector:
-    app: hello-spring-boot
-  ports:
-    - protocol: TCP
-      port: 9091
-      targetPort: spring-boot-svc
