--- a/workshop1/hello-spring-boot-service.yaml
+++ b/workshop1/hello-spring-boot-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata: 
   name: spring-boot-service
-  namespace: hello-kubernetes
+  namespace: workshop1
 spec:
   selector:
     app: hello-spring-boot
